# whistle_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
script/: preprocess_data.py
whistle_detection/: __init__.py  dataset.py  detect.py  model.py  train.py  utils.py
