[tool.poetry]
name = "whistle-detection"
version = "0.1.0"
license = "MIT"
description = "PyTorch implementation of a whistle sound detection"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "whistle_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.0"
torchaudio = "^0.13.0"
torchvision = "^0.14.0"
tqdm = "^4.64.1"
wandb = "^0.13.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
